[package]
name = "tempget"
version = "0.1.0"
authors = ["Bryan Tan <techniux@gmail.com>"]

[dependencies]
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
config = "0.8.0"
serde = "^1.0.8"
serde_derive = "^1.0.8"
url_serde = "0.2.0"
error-chain = "0.12.0"
zip = "^0.4.2"
structopt = "0.2.0"
futures = "~0.1.21"
tokio = "~0.1.7"
tokio-codec = "~0.1.0"
console = "~0.6.1"
