[package]
name = "tempget"
version = "0.1.0"
authors = ["Bryan Tan <techniux@gmail.com>"]

[dependencies]
reqwest = { version = "^0.9.14", default-features = false, features = ["rustls-tls"] }
config = "0.8.0"
serde = "^1.0.8"
serde_derive = "^1.0.8"
url_serde = "0.2.0"
error-chain = "0.12.0"
zip = "^0.5.2"
structopt = "0.2.0"
futures = "~0.1.21"
tokio = "~0.1.7"
tokio-codec = "~0.1.0"
console = "~0.6.1"
number_prefix = "0.3.0"
