[package]
name = "tempget"
version = "0.1.0"
authors = ["Bryan Tan <techniux@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "^0.9.15", default-features = false, features = ["rustls-tls"] }
config = "0.8.0"
serde = "^1.0.8"
serde_derive = "^1.0.8"
url_serde = "0.2.0"
failure = "0.1.5"
zip = "^0.5.2"
structopt = { version = "~0.2.15", default-features = false, features = ["color", "suggestions", "wrap_help"] }
futures = "~0.1.21"
tokio = "~0.1.18"
console = "~0.6.1"
number_prefix = "0.3.0"

[profile.release]
lto = true
